--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^4.5.1",
     "@nestjs/typeorm": "^7.0.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "dotenv": "^8.2.0",
     "pg": "^8.0.0",
