--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pretypeorm": "ts-node -r tsconfig-paths/register src/scripts/write-type-orm-config.ts",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -n",
-    "typeorm:migration:run": "npm run typeorm -- migration:run"
+    "typeorm:migration:run": "npm run typeorm -- migration:run",
+    "typeorm:migration:rollback": "npm run typeorm -- migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
